MultipleOneToOneMapping works