@@ -1,6 +1,7 @@
 package de.konni.msg.dataformats.core;
 
 import de.konni.msg.dataformats.core.mappings.FirstSimpleMapping;
+import de.konni.msg.dataformats.core.mappings.MultipleOneToOneMapping;
 import org.junit.jupiter.api.Test;
 
 import java.util.Collections;
@@ -13,14 +14,29 @@ class MappingTest {
     void firstSimpleMappingWorks() {
         var mapping = new FirstSimpleMapping();
 
-        var values = List.of(new Value(new Path("benutzername"), Type.STRING, "xxx"));
+        var value = new Value(new Path("benutzername"), Type.STRING, "xxx");
+        var before = new Data(DataFormatId.PROS_TRANSACTION_METADATA_UPDATE, List.of(value));
+        var after = new Data(DataFormatId.MAP, Collections.emptyList());
+
+        mapping.applyTo(before, after);
+
+        assertEquals(new Value(new Path("benutzernamePath"), Type.STRING, "XXX"), after.get(new Path("benutzernamePath")));
+    }
+
+    @Test
+    void multipleOneToOneMappingWorks() {
+        var mapping = new MultipleOneToOneMapping();
+
+        var values = List.of(
+                new Value(new Path("benutzername"), Type.STRING, "xxx"),
+                new Value(new Path("institutsname"), Type.STRING, "xxx")
+        );
         var before = new Data(DataFormatId.PROS_TRANSACTION_METADATA_UPDATE, values);
         var after = new Data(DataFormatId.MAP, Collections.emptyList());
 
         mapping.applyTo(before, after);
 
-        var expected = new Value(new Path("xxxPath"), Type.STRING, "XXX");
-        var result = after.get(new Path("xxxPath"));
-        assertEquals(expected, result);
+        assertEquals(new Value(new Path("benutzernamePath"), Type.STRING, "XXX"), after.get(new Path("benutzernamePath")));
+        assertEquals(new Value(new Path("institutsnamePath"), Type.STRING, "XXX"), after.get(new Path("institutsnamePath")));
     }
 }
